--- a/repair.html
+++ b/repair.html
@@ -31,7 +31,7 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -43,7 +43,7 @@
     <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/repair.css" rel="stylesheet">
+    <link href="css/template.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,46 +55,56 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="span4 text-center">
-        <div>Ask for official help from school, usually need 2 days to come:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
-                    <span class="glyphicon glyphicon-user"> Maintenance-Request</button>
+    <div class="container-fluid meal-font">
+        <div class="row-fluid">
+            <div class="span4 text-center">
+                <div>Ask for official help from school, usually need 2 days to come:</div>
+                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-lg">
+                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
+                                <span class="glyphicon glyphicon-user">&nbsp;Maintenance-Request</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="span4 text-center">
-    <div>Ask for help from the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
-                    <span class="glyphicon glyphicon-refresh"> Ask-for-help</button>
+            <div class="span4 text-center">
+                <div>Ask for help from the students living in the same apartment:</div>
+                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-lg">
+                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
+                                <span class="glyphicon glyphicon-refresh">&nbsp;Ask-for-help</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="span4 text-center">
-        <div>Join to help the students living in the same apartment:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
-                    <span class="glyphicon glyphicon-retweet"> Join-to-help</button>
+            <div class="span4 text-center">
+                <div>Join to help the students living in the same apartment:</div>
+                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-lg">
+                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
+                                <span class="glyphicon glyphicon-retweet">&nbsp;Join-to-help</span>
+                            </button>
+
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="span4 text-center">
-        <div>Search for the frequently asked questions & answers:</div>
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
-                    <span class="glyphicon glyphicon-search"> Problems&Solutions</button>
+            <div class="span4 text-center">
+                <div>Search for the frequently asked questions & answers:</div>
+                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-toolbar">
+                        <div class="btn-group btn-group-lg">
+                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
+                                <span class="glyphicon glyphicon-search">&nbsp;Problems&Solutions</span>
+                            </button>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
