--- a/activity.html
+++ b/activity.html
@@ -37,32 +37,33 @@
         <div class="row-fluid">
             <div class="col-md-1"></div>
             <div class="col-md-20">
-                <div class="btn-group">
-                    <button type="button" class="btn btn-default">UPCOMING</button>
-                    <button type="button" class="btn btn-default">HISTORY</button>
-
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                            All
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">ALL</a>
-                            </li>
-                            <li><a href="#">Engelhart</a>
-                            </li>
-                            <li><a href="#">Seabury</a>
-                            </li>
-                            <li><a href="#">McMaus</a>
-                            </li>
-                        </ul>
+                <div class="span4 text-center">
+                    <div class="btn-group meal-font btn-group panel panel-default">
+                        <button type="button" class="btn btn-default">UPCOMING</button>
+                        <button type="button" class="btn btn-default">HISTORY</button>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle " data-toggle="dropdown">
+                                All
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" style="right: 0; left: auto;">
+                                <li><a href="#">All</a>
+                                </li>
+                                <li><a href="#">Engelhart</a>
+                                </li>
+                                <li><a href="#">Seabury</a>
+                                </li>
+                                <li><a href="#">McMaus</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="span4 text-center">
-                    <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                    <div class="btn-group btn-group-vertical panel panel-default meal-font">
                         <div class="btn-toolbar">
                             <div class="btn-group btn-group-lg">
-                                <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='activity-launch.html'">Post New!</button>
+                                <button type="submit" class="btn btn-default btn-primary" class="btn btn-xlarge btn-primary sign" onclick="location.href='activity-launch.html'">&nbsp;&nbsp;&nbsp;Post New!&nbsp;&nbsp;&nbsp;</button>
                             </div>
                         </div>
                     </div>
