--- a/repair-maintenance-request.html
+++ b/repair-maintenance-request.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Schedule Your Life</title>
 
-
-
     <script>
     WebFontConfig = {
         google: {
@@ -31,7 +29,7 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -43,7 +41,7 @@
     <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/repair.css" rel="stylesheet">
+    <link href="css/template.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,8 +53,10 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="span4 text-center"><h2>MAINTENANCE REQUEST</h2></div>
-    <form role="form">
+    <div class="span4 text-center">
+        <h2>MAINTENANCE REQUEST</h2>
+    </div>
+    <form role="form" class="meal-font">
         <div class="form-group">
             <label>*Problem Type:</label>
             <br>
@@ -64,8 +64,10 @@
             <input type="radio" id="radio2">Heating
             <input type="radio" id="radio3">Toilets
             <input type="radio" id="radio4">Computers
-            <input type="radio" id="radio5">Networks<br>
-            <input type="radio" id="radio6">Others: <textarea rows="1"></textarea>
+            <input type="radio" id="radio5">Networks
+            <br>
+            <input type="radio" id="radio6">Others:
+            <textarea rows="1"></textarea>
         </div>
         <div class="form-group">
             <label>*Problem Description:</label>
@@ -75,12 +77,16 @@
             <label>*Apartment Building:</label>
             <div class="btn-group">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                Engelhart<span class="caret"></span>
+                    Engelhart
+                    <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Engelhart</a></li>
-                <li><a href="#">Seabury</a></li>
-                <li><a href="#">McMaus</a></li>
+                    <li><a href="#">Engelhart</a>
+                    </li>
+                    <li><a href="#">Seabury</a>
+                    </li>
+                    <li><a href="#">McMaus</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -95,9 +101,9 @@
     </form>
     <div class="center">
         <button class="btn btn-default" onclick="location.href='repair-submit.html'">Submit</button>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <button class="btn btn-default" onclick="location.href='repair-maintenance-request.html'">Clear All</button>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
 </body>
