--- a/repair-submit.html
+++ b/repair-submit.html
@@ -31,7 +31,7 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <!-- Google fonts -->
@@ -43,7 +43,7 @@
     <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/repair.css" rel="stylesheet">
+    <link href="css/template.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,10 +55,14 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="span4 text-center">
-        <h1>Submission Succeed!</h1>
-        <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
+    <div class="span4 text-center meal-font">
+        <div class="col-xs-1 col-sm-1"></div>
+        <div class="col-xs-10 col-sm-10">
+            <div align="center" class="alert alert-success">Request successfully submitted!</div>
+            <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
+        </div>
     </div>
+
 </body>
 
 </html>
