--- a/repair-maintenance-request.html
+++ b/repair-maintenance-request.html
@@ -67,7 +67,7 @@
             <input type="radio" id="radio5">Networks
             <br>
             <input type="radio" id="radio6">Others:
-            <textarea rows="1"></textarea>
+            <textarea class="form-control" rows="1"></textarea>
         </div>
         <div class="form-group">
             <label>*Problem Description:</label>
