--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -65,13 +65,13 @@
                     <div class="form-group">
                         <label>*The problem types you may be able to help (Select all that applied):</label>
                         <br>
-                        <input type="checkbox" id="checkbox1">Electicity
-                        <input type="checkbox" id="checkbox2">Heating
-                        <input type="checkbox" id="checkbox3">Toilets
-                        <input type="checkbox" id="checkbox4">Computers
-                        <input type="checkbox" id="checkbox5">Networks
+                        <input type="checkbox" id="checkbox1">&nbsp;Electicity
+                        <input type="checkbox" id="checkbox2">&nbsp;Heating
+                        <input type="checkbox" id="checkbox3">&nbsp;Toilets
+                        <input type="checkbox" id="checkbox4">&nbsp;Computers
+                        <input type="checkbox" id="checkbox5">&nbsp;Networks
                         <br>
-                        <input type="checkbox" id="checkbox6">Others:
+                        <input type="checkbox" id="checkbox6">&nbsp;Others:
                         <textarea class="form-control" rows="1"></textarea>
                     </div>
 
@@ -96,13 +96,13 @@
                     <div class="form-group">
                         <label>*Would like to reveive messages of maintenance request via (Select all that applied):</label>
                         <br>
-                        <input type="checkbox" id="checkbox7">E-mail:&nbsp;
+                        <input type="checkbox" id="checkbox7">&nbsp;E-mail:&nbsp;
                         <textarea class="form-control" rows="1" placeholder="Enter your e-mail Address"></textarea>
                         <br>
-                        <input type="checkbox" id="checkbox8">Phone:&nbsp;
+                        <input type="checkbox" id="checkbox8">&nbsp;Phone:&nbsp;
                         <textarea class="form-control" rows="1" placeholder="Enter your phone#"></textarea>
                         <br>
-                        <input type="checkbox" id="checkbox9">APP Notices
+                        <input type="checkbox" id="checkbox9">&nbsp;APP Notices
                     </div>
                 </form>
 
