--- a/activity-launch.html
+++ b/activity-launch.html
@@ -33,7 +33,7 @@
 <body>
     <div id="include_navBar"></div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <h1 class="text-center">LAUNCH ONE</h1>
+    <h1 class="text-center">LAUNCH NEW</h1>
     <p></p>
     <div class="container-fluid">
         <div class="row-fluid">
