--- a/profile.html
+++ b/profile.html
@@ -33,10 +33,31 @@
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-1 col-sm-1 text-center">01</div>
-            <div class="col-xs-10 col-sm-10 text-center">10</div>
-            <div class="col-xs-1 col-sm-1 text-center">01</div>
+        <div class="row-fluid">
+            <div class="col-xs-1 col-sm-1 text-center"></div>
+            <div class="col-xs-10 col-sm-10 text-center">
+                <h1 class="text-center">My Profile</h1><br><br>
+                <button type="button" class="btn btn-primary btn-lg text0right">Edit Profile</button><br>
+                <img src="img/wildcat.png" class="img-responsive" alt="Responsive image">
+                <ul class="list-group">
+                    <li class="list-group-item list-group-item-success text-left">
+                        <strong>Your Name:</strong> P. Linda
+                    </li><br><br>
+                    <li class="list-group-item list-group-item-info text-left">
+                        <strong>Your Location:</strong> Engelhart Room 617
+                    </li><br><br>
+                    <li class="list-group-item list-group-item-warning text-left">
+                        <strong>Your Email:</strong> Linda@u.northwestern.edu
+                    </li><br><br>
+                    <li class="list-group-item list-group-item-danger text-left">
+                        <strong>Your Gender:</strong> Male
+                    </li><br><br>
+                    <li class="list-group-item list-group-item-success text-left">
+                        <strong>Whats up:</strong> Happy every day!
+                    </li><br><br>
+                </ul>
+            </div>
+            <div class="col-xs-1 col-sm-1 text-center"></div>
         </div>
     </div>
 
