--- a/profile.html
+++ b/profile.html
@@ -53,22 +53,22 @@
             <p></p>
             <ul class="list-group meal-font">
                 <li class="list-group-item list-group-item-success text-left">
-                    <strong>Your Name:&nbsp;</strong>P. Linda
+                    <strong>Name:&nbsp;</strong>P. Linda
                 </li>
                 <br>
                 <br>
                 <li class="list-group-item list-group-item-info text-left">
-                    <strong>Your Location:&nbsp;</strong>Engelhart Room 617
+                    <strong>Location:&nbsp;</strong>Engelhart Room 617
                 </li>
                 <br>
                 <br>
-                <li class="list-group-item list-group-item-warning text-left">
-                    <strong>Your Email:&nbsp;</strong>Linda@u.northwestern.edu
+                <li class="list-group-item list-group-item-success text-left">
+                    <strong>Email:&nbsp;</strong>Linda@u.northwestern.edu
                 </li>
                 <br>
                 <br>
-                <li class="list-group-item list-group-item-danger text-left">
-                    <strong>Your Gender:&nbsp;</strong>Male
+                <li class="list-group-item list-group-item-info text-left">
+                    <strong>Gender:&nbsp;</strong>Male
                 </li>
                 <br>
                 <br>
