small change repair.html

--- a/activity.html
+++ b/activity.html
@@ -73,14 +73,13 @@
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
+                                    <span class=" glyphicon glyphicon-time"></span> 02-02 20:00-22:00</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
+                                    <span class=" glyphicon glyphicon-map-marker"></span> Engelhalt Room 325</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
+                                    <span class=" glyphicon glyphicon-tag"></span> TAG: Basketball</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>
-                                    <abbr title="Phone">Tel:</abbr>(123) 456-7890</li>
+                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (123) 456-7890</li>
                                 <p></p>
                                 <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
                             </strong>
@@ -93,14 +92,13 @@
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 21:00-23:00</li>
-                                <li>
+                                    <span class=" glyphicon glyphicon-time"></span> 02-04 21:00-23:00</li>
+                                <li> 
                                     <span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG:Table Game</li>
+                                    <span class=" glyphicon glyphicon-tag"></span> TAG: Table Game</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>
-                                    <abbr title="Phone">Tel:</abbr>(222) 333-4455</li>
+                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (222) 333-4455</li>
                                 <p></p>
                                 <button type="submit" class="btn">See Details</button>
                             </strong>
@@ -113,14 +111,13 @@
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span>02-04 14:00-15:00</li>
+                                    <span class=" glyphicon glyphicon-time"></span> 02-04 14:00-15:00</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
+                                    <span class=" glyphicon glyphicon-map-marker"></span> Engelhalt Room 214</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
+                                    <span class=" glyphicon glyphicon-tag"></span> TAG: PC GAME</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span>
-                                    <abbr title="Phone">Tel:</abbr>(999) 888-7766</li>
+                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (999) 888-7766</li>
                                 <p></p>
                                 <button type="submit" class="btn">See Details</button>
                             </strong>
@@ -131,8 +128,6 @@
             <div class="col-md-1"></div>
         </div>
     </div>
-    <!-- DO NOT MODIFY THOSE FOLLOWING -->
-
 </body>
 
 </html>
