--- a/repair-maintenance-request.html
+++ b/repair-maintenance-request.html
@@ -87,8 +87,8 @@
                 <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
             </div>
         </div>
+        <div class="row-fluid">&nbsp;</div>
     </div>
-    <br/>
 </body>
 
 </html>
