--- a/navbar.html
+++ b/navbar.html
@@ -15,13 +15,13 @@
             <!-- Collection of nav links and other content for toggling -->
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li id="activity-navbar"><a href="activity.html"><i class="fa fa-users fa-fw"></i>|Activities</a>
+                    <li id="activity-navbar"><a href="activity.html"><i class="fa fa-puzzle-piece fa-fw"></i>|Activities</a>
                     </li>
                     <li id="repair-navbar"><a href="repair.html"><i class="fa fa-wrench fa-fw"></i>|Repair</a>
                     </li>
                     <li id="meals-navbar"><a href="meals.html"><i class="fa fa-cutlery fa-fw"></i>|Meals</a>
                     </li>
-                    <li id="profile-navbar"><a href="profile.html"><i class="fa fa-cog fa-fw"></i>|Profile</a>
+                    <li id="profile-navbar"><a href="profile.html"><i class="fa fa-user fa-fw"></i>|Profile</a>
                     </li>
                 </ul>
             </div>
