--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -95,8 +95,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <br/>
+        <div class="row-fluid">&nbsp;</div>
+    </div>    
 </body>
 
 </html>
