--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -91,8 +91,8 @@
                 </div>
             </div>
         </div>
+        <div class="row-fluid">&nbsp;</div>
     </div>
-    <br/>
 </body>
 
 </html>
