--- a/repair.html
+++ b/repair.html
@@ -31,55 +31,45 @@
 
 <body>
     <div id="include_navBar"></div>
-    <div class="container-fluid meal-font">
+    <div class="container-fluid">
         <div class="row-fluid">
             <div class="span4 text-center">
-                <div>Ask for official help from school, usually need 2 days to come:</div>
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                <div class="meal-font">Ask for official help from school, usually need 2 days to come.</div>
+                <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
-                                <span class="glyphicon glyphicon-user">&nbsp;Maintenance-Request</span>
-                            </button>
-                        </div>
+                        <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
+                            <i class="fa fa-user"></i>|Maintenance-Request
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="span4 text-center">
-                <div>Ask for help from the students living in the same apartment:</div>
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                <div class="meal-font">Ask for help from the students living in the same apartment.</div>
+                <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
-                                <span class="glyphicon glyphicon-refresh">&nbsp;Ask-for-help</span>
-                            </button>
-                        </div>
+                        <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
+                            <i class="fa fa-refresh"></i>|Ask-for-help
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="span4 text-center">
-                <div>Join to help the students living in the same apartment:</div>
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                <div class="meal-font">Join to help the students living in the same apartment.</div>
+                <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
-                                <span class="glyphicon glyphicon-retweet">&nbsp;Join-to-help</span>
-                            </button>
-
-                        </div>
+                        <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
+                            <i class="fa fa-user-md"></i>|Join-to-help
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="span4 text-center">
-                <div>Search for the frequently asked questions & answers:</div>
-                <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                <div class="meal-font">Search for the frequently asked questions and answers:</div>
+                <div class="btn-group btn-group-lg btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
-                        <div class="btn-group btn-group-lg">
-                            <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
-                                <span class="glyphicon glyphicon-search">&nbsp;Problems&Solutions</span>
-                            </button>
-
-                        </div>
+                        <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
+                            <i class="fa fa-cogs"></i>|Problems&Solutions
+                        </button>
                     </div>
                 </div>
             </div>
