--- a/main.html
+++ b/main.html
@@ -62,7 +62,7 @@
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
-                            <button class="btn btn-xlarge btn-primary md-trigger" data-modal="modal-1">Sign In</button>
+                            <button class="btn btn-xlarge btn-primary md-trigger" data-modal="modal-1" style="width:80px">Sign In</button>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
                     <div class="btn-toolbar">
                         <div class="btn-group btn-group-lg">
-                            <button class="btn btn-xlarge btn-primary md-trigger" data-modal="modal-2">Sign Up</button>
+                            <button class="btn btn-xlarge btn-primary md-trigger" data-modal="modal-2" style="width:80px">Sign Up</button>
                         </div>
                     </div>
                 </div>
@@ -107,6 +107,13 @@
                     <div>
                         <input type="password" name="password" id="password" class="form-control" placeholder="Password" value="">
                         <span class="help-block"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox">Remember me
+                        </label>
                     </div>
                 </div>
                 <div class="form-group">
