--- a/profile.html
+++ b/profile.html
@@ -46,42 +46,58 @@
                     </th>
                     <th valign="bottom" align="right">
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <button type="button" class="btn">Edit Profile</button>
+                        <button type="button" class="btn btn-lg">Upload Profile</button>
                     </th>
                 </tr>
             </table>
-            <p></p>
+            <br/>
+            <!--
+            <form class="form-horizontal meal-font" role="form">
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-1 control-label">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-1 control-label">Password</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    </div>
+                </div>
+            </form>
+            -->
             <ul class="list-group meal-font">
                 <li class="list-group-item list-group-item-success text-left">
                     <strong>Name:&nbsp;</strong>P. Linda
                 </li>
                 <br>
-                <br>
                 <li class="list-group-item list-group-item-info text-left">
                     <strong>Location:&nbsp;</strong>Engelhart Room 617
                 </li>
-                <br>
                 <br>
                 <li class="list-group-item list-group-item-success text-left">
                     <strong>Email:&nbsp;</strong>Linda@u.northwestern.edu
                 </li>
                 <br>
-                <br>
                 <li class="list-group-item list-group-item-info text-left">
                     <strong>Gender:&nbsp;</strong>Male
                 </li>
                 <br>
-                <br>
                 <li class="list-group-item list-group-item-success text-left">
                     <strong>Whats up:&nbsp;</strong>Happy every day!
                 </li>
-                <br>
-                <br>
             </ul>
         </div>
-        <div class="col-xs-1 col-sm-1 text-center"></div>
-    </div>
-    </div>
+        <div class="row-fluid">
+            <div class="col-sm-4 col-md-2">
+                <div class="form-group">
+                    <input type="submit" class="md-close btn btn-primary btn-lg btn-block" value="Save Changes">
+                </div>
+            </div>
+        </div>
+        <div class="row-fluid">
+        </div>
 </body>
 
 </html>
