--- a/meals-submit.html
+++ b/meals-submit.html
@@ -60,7 +60,7 @@
         <div class="col-xs-1 col-sm-1"></div>
         <div class="col-xs-10 col-sm-10">
             <div align="center" class="alert alert-success">Request successfully submitted!</div>
-            <button class="btn btn-default" onclick="location.href='meals.html'">Back</button>
+            <button class="btn btn-default" onclick="location.href='meals.html'" style="width:100px;">Back</button>
         </div>
     </div>
 
