--- a/meals.html
+++ b/meals.html
@@ -59,11 +59,11 @@
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
                 <div class="btn-toolbar btn-group-regular">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Noodle&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'" style="width:102px;">
+                        Noodle
                     </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                        &nbsp;&nbsp;&nbsp;&nbsp;Pizza&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'" style="width:102px;">
+                        Pizza
                     </button>
                 </div>
             </div>
@@ -73,11 +73,11 @@
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
                 <div class="btn-toolbar btn-group-regular">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
+                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'" style="width:102px;">
                         ChickenSack
                     </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
-                        &nbsp;&nbsp;Subway&nbsp;&nbsp;
+                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'" style="width:102px;">
+                        Subway
                     </button>
                 </div>
             </div>
