--- a/meals-create.html
+++ b/meals-create.html
@@ -87,9 +87,9 @@
                 <label>Date</label>
                 <input type="date" class="form-control" id="mdate" value="" style="width: 230px;">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <button type="submit" class="btn btn-default">Save as Favorite</button>
+            <button type="submit" class="btn btn-default" style="width:105px;">Submit</button>
+            &nbsp;&nbsp;&nbsp;
+            <button type="submit" class="btn btn-default" style="width:105px;">Save As Fav</button>
         </form>
     </div>
 
