--- a/meals-edit.html
+++ b/meals-edit.html
@@ -87,8 +87,8 @@
                 <label>Date</label>
                 <input type="date" class="form-control" id="mdate" value="2013-03-02" style="width: 230px;">
             </div>
-            <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <button class="btn btn-default">Delete Order</button>
+            <button type="submit" class="btn btn-default" style="width:108px;">Submit</button>&nbsp;&nbsp;&nbsp;
+            <button class="btn btn-default" style="width:108px;">Cancel Order</button>
         </form>
     </div>
 
