Adjust the position of checkbox

--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -41,13 +41,13 @@
                     <div class="form-group">
                         <label>*Problem Type:</label>
                         <br>
-                        <input type="radio" id="radio1">&nbsp;Electicity
-                        <input type="radio" id="radio2">&nbsp;Heating
-                        <input type="radio" id="radio3">&nbsp;Toilets
-                        <input type="radio" id="radio4">&nbsp;Computers
-                        <input type="radio" id="radio5">&nbsp;Networks
+                        <input type="radio" id="radio1">Electicity
+                        <input type="radio" id="radio2">Heating
+                        <input type="radio" id="radio3">Toilets
+                        <input type="radio" id="radio4">Computers
+                        <input type="radio" id="radio5">Networks
                         <br>
-                        <input type="radio" id="radio6">&nbsp;Others:
+                        <input type="radio" id="radio6">Others:
                         <textarea class="form-control" rows="1"></textarea>
                     </div>
                     <div class="form-group">
