--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -41,13 +41,13 @@
                     <div class="form-group">
                         <label>*The problem types you may be able to help (Select all that applied):</label>
                         <br>
-                        <input type="checkbox" id="checkbox1">&nbsp;Electicity
-                        <input type="checkbox" id="checkbox2">&nbsp;Heating
-                        <input type="checkbox" id="checkbox3">&nbsp;Toilets
-                        <input type="checkbox" id="checkbox4">&nbsp;Computers
-                        <input type="checkbox" id="checkbox5">&nbsp;Networks
+                        <input type="checkbox" id="checkbox1">Electicity
+                        <input type="checkbox" id="checkbox2">Heating
+                        <input type="checkbox" id="checkbox3">Toilets
+                        <input type="checkbox" id="checkbox4">Computers
+                        <input type="checkbox" id="checkbox5">Networks
                         <br>
-                        <input type="checkbox" id="checkbox6">&nbsp;Others:
+                        <input type="checkbox" id="checkbox6">Others:
                         <textarea class="form-control" rows="1"></textarea>
                     </div>
 
