--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -46,9 +46,8 @@
                         <input type="radio" id="radio3">Toilets
                         <input type="radio" id="radio4">Computers
                         <input type="radio" id="radio5">Networks
-                        <br>
                         <input type="radio" id="radio6">Others:
-                        <textarea class="form-control" rows="1"></textarea>
+                        <textarea class="form-control" rows="1" placeholder="If choose others, specify the type."></textarea>
                     </div>
                     <div class="form-group">
                         <label>*Problem Description:</label>
