--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -46,9 +46,8 @@
                         <input type="checkbox" id="checkbox3">Toilets
                         <input type="checkbox" id="checkbox4">Computers
                         <input type="checkbox" id="checkbox5">Networks
-                        <br>
                         <input type="checkbox" id="checkbox6">Others:
-                        <textarea class="form-control" rows="1"></textarea>
+                        <textarea class="form-control" rows="1" placeholder="If choose others, specify the type."></textarea>
                     </div>
 
                     <div class="form-group">
