activity layout change

--- a/profile.html
+++ b/profile.html
@@ -96,8 +96,7 @@
                 </div>
             </div>
         </div>
-        <div class="row-fluid">
-        </div>
+        <div class="row-fluid"></div>
 </body>
 
 </html>
