--- a/activity.html
+++ b/activity.html
@@ -31,55 +31,60 @@
 
 <body>
     <div id="include_navBar"></div>
-    <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="container-fluid">
+    <div class="container">
         <div class="row-fluid">
-            <div class="col-md-20">
-                <div class="span4 text-center">
-                    <div class="btn-group meal-font btn-group panel panel-default">
-                        <button type="button" class="btn btn-default">UPCOMING</button>
-                        <button type="button" class="btn btn-default">HISTORY</button>
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle " data-toggle="dropdown">
-                                All
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" style="right: 0; left: auto;">
-                                <li><a href="#">All</a>
-                                </li>
-                                <li><a href="#">Engelhart</a>
-                                </li>
-                                <li><a href="#">Seabury</a>
-                                </li>
-                                <li><a href="#">McMaus</a>
-                                </li>
-                            </ul>
-                        </div>
+        	<div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
+                <div class="btn-group btn-block">
+                    <button type="button" class="btn btn-default btn-lg" style="width: 33.3%; font-size: 110%;">Upcoming</button>
+                    <button type="button" class="btn btn-default btn-lg" style="width: 33.3%; font-size: 110%;">History</button>
+                    <div class="btn-group" style="width: 33.3%;">
+                        <button type="button" class="btn btn-default btn-lg dropdown-toggle " data-toggle="dropdown" style="width: 100%; font-size: 110%;">
+                            All
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-right" role="menu" style="text-align: center; font-size: 110%; min-width: 100%;">
+                            <li><a href="#">All</a>
+                            </li>
+                            <li><a href="#">Engelhart</a>
+                            </li>
+                            <li><a href="#">Seabury</a>
+                            </li>
+                            <li><a href="#">McMaus</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="span4 text-center">
-                    <div class="btn-group btn-group-vertical panel panel-default meal-font">
-                        <div class="btn-toolbar">
-                            <div class="btn-group btn-group-lg">
-                                <button type="submit" class="btn btn-default btn-primary" class="btn btn-xlarge btn-primary sign" onclick="location.href='activity-launch.html'">&nbsp;&nbsp;&nbsp;Post New!&nbsp;&nbsp;&nbsp;</button>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+            <div class="col-md-2 col-sm-0"></div>
+        </div>
+        <div class="row-fluid"><div class="col-md-12 col-sm-12"><br/></div></div>
+        <div class="row-fluid">
+            <div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
+                <div class="btn-group btn-block">
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" onclick="location.href='activity-launch.html'" style="width: 100%">Post New!</button>
                 </div>
-
+            </div>
+            <div class="col-md-2 col-sm-0"></div>
+        </div>
+        <div class="row-fluid"><div class="col-md-12 col-sm-12"><br/></div></div>
+        <div class="row-fluid">
+        	<div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
                 <div class="panel panel-primary meal-font">
                     <div class="panel-heading">NBA GALA!</div>
                     <div class="panel-body">
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span> 02-02 20:00-22:00</li>
+                                    <span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span> Engelhalt Room 325</li>
+                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span> TAG: Basketball</li>
+                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (123) 456-7890</li>
+                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (123) 456-7890</li>
                                 <p></p>
                                 <button type="submit" class="btn" onclick="location.href='activity-details.html'">See Details</button>
                             </strong>
@@ -92,13 +97,13 @@
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span> 02-04 21:00-23:00</li>
-                                <li> 
-                                    <span class=" glyphicon glyphicon-map-marker"></span> Seabury Room 201</li>
+                                    <span class=" glyphicon glyphicon-time"></span>02-04 21:00-23:00</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span> TAG: Table Game</li>
+                                    <span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (222) 333-4455</li>
+                                    <span class=" glyphicon glyphicon-tag"></span>TAG: Table Game</li>
+                                <li>
+                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (222) 333-4455</li>
                                 <p></p>
                                 <button type="submit" class="btn">See Details</button>
                             </strong>
@@ -111,13 +116,13 @@
                         <ul>
                             <strong>
                                 <li>
-                                    <span class=" glyphicon glyphicon-time"></span> 02-04 14:00-15:00</li>
+                                    <span class=" glyphicon glyphicon-time"></span>02-04 14:00-15:00</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-map-marker"></span> Engelhalt Room 214</li>
+                                    <span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-tag"></span> TAG: PC GAME</li>
+                                    <span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
                                 <li>
-                                    <span class=" glyphicon glyphicon-phone"></span> Tel: (999) 888-7766</li>
+                                    <span class=" glyphicon glyphicon-phone"></span>Tel: (999) 888-7766</li>
                                 <p></p>
                                 <button type="submit" class="btn">See Details</button>
                             </strong>
@@ -125,8 +130,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-md-2 col-sm-0"></div>
         </div>
+        <div class="row-fluid"></div>
     </div>
 </body>
 
