--- a/activity-launch.html
+++ b/activity-launch.html
@@ -48,7 +48,7 @@
             <div class="col-md-8 col-sm-12">
                 <form role="form">
                     <p class="help-block meal-font">
-                        <span style="color: #FF0000;">*</span>is required.</p>
+                        <span style="color: #FF0000;">*</span>&nbsp;is required.</p>
                     <div class="form-group meal-font">
                         <label>Host Name</label>
                         <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)" value="P. Linda">
